# InMeal

./: .dockerignore  .env.example  .eslintignore  .gitignore  .nxignore  .prettierignore  .prettierrc.js  Directory.Packages.props  Dockerfile  LICENSE  README.md  docker-compose.yml  jest.config.js  jsconfig.base.json  migrations.json  nuget.config  nx.json  package-lock.json  package.json  requirements.txt  tsconfig.base.json
.github/: labeler.yml  release.yml
.github/workflows/: labeler.yml  main.yml
GenerativeRecipesMicroservice/: app.py
GenerativeRecipesMicroservice/api/: __init__.py  images.py
GenerativeRecipesMicroservice/infrastructure/: ModelProvider.py
GenerativeRecipesMicroservice/swagger/: images-service-docs.yaml
InMeal/: .dockerignore  Dockerfile  Program.cs  Startup.cs  appsettings.Production.json  docker-compose.yml
InMeal.Core/: InMeal.Core.csproj  InMealDbMigrationContext.cs
InMeal.Core/Entities/: Ingredient.cs
InMeal.Core/Globalisation/Generators/: NewIdGenerator.cs
InMeal.Core/Mementos/: IngredientMemento.cs
InMeal.Core/Migrations/: 20230911092724_Update_Recipe_RemovedNullablePrepAndCookTimes.Designer.cs  InMealDbMigrationContextModelSnapshot.cs
InMeal.Infrastructure/: AsyncDbContext.cs
InMeal.Infrastructure/IQueryableExtensions/: RandomiseRows.cs
InMeal/DTOs/Ingredients/: AlphabeticallyIndexedIngredientDto.cs  IngredientDetailDto.cs
InMeal/DTOs/Recipes/: RecipeDto.cs  RecipeIngredientDto.cs
InMeal/Features/Recipes/: RecipeManager.cs
InMeal/InMeal/: ApplicationServiceRegistrationExtensions.cs  CancellationTokenAccessor.cs  EfContextRegistrationExtensions.cs  InMeal.csproj  InstanceScopedBusinessServiceAttribute.cs  Program.cs  Startup.cs  appsettings.Production.json  appsettings.json  project.json
InMeal/InMeal.Api/: InMeal.Api.csproj  Startup.cs
InMeal/InMeal.Core/: IArchivable.cs  InMeal.Core.csproj  InMealDbMigrationContext.cs  InMealDbMigrationContextFactory.cs
InMeal/InMeal.Infrastructure/: EmptyGuidGuard.cs  InMeal.Infrastructure.csproj  InstanceScopedSericeAttribute.cs  project.json
InMeal/Mappers/: RecipeCategoryMapper.cs
InMeal/RegistrationExtensions/: EfContextRegistrationExtensions.cs
app/: Dockerfile  main.py  requirements.txt
app/configuration/: app_settings.py
app/infrastructure/: ModelOrchestrator.py  ModelProvider.py
app/routers/: images.py  test.py
apps/: .dockerignore  Dockerfile  api.sln
apps/Configuration/: Configuration.csproj  ConfigurationFactory.cs  DatabaseSettings.cs  DependencyRegistrationExtensions.cs  FakeRecipeImageMicroserviceConfig.cs  GenerativeRecipeImagesMicroserviceConfig.cs  project.json
apps/InMeal/: CancellationTokenAccessor.cs  InstanceScopedBusinessServiceAttribute.cs  appsettings.Development.json
apps/InMeal.Api/: .gitignore  CancellationTokenAccessor.cs  Dockerfile  InMeal.Api.csproj  InstanceScopedBusinessServiceAttribute.cs  Program.cs  README.md  Startup.cs  appsettings.Development.json  appsettings.Production.json  project.json
apps/InMeal.Core/: .gitignore  IArchivable.cs  InMeal.Core.csproj  InMealDbMigrationContextFactory.cs  appsettings.json  global.json  project.json
apps/InMeal.Infrastructure/: InMeal.Infrastructure.csproj  project.json
apps/api/: Dockerfile
apps/fui/: Dockerfile  README.md  README.old.md  index.html  jest.config.js  package-lock.json  package.json  project.json  setupTestsAfterEnv.js  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json  vite.config.ts
apps/generative-recipe-images/: project.json  pyproject.toml  requirements.txt
apps/generative-recipe-images/configuration/: app_settings.py
apps/generative-recipe-images/routers/: images.py
apps/gri/: Dockerfile  README.md  project.json  pyproject.toml
apps/gri/generative-recipe-images/: main.py
apps/gri/gri/: __init__.py
apps/gri/gri/configuration/: app_settings.py
apps/gri/gri/infrastructure/: ModelOrchestrator.py  ModelProvider.py
apps/gri/gri/routers/: images.py
apps/meal-ui/: .dockerignore  .gitignore  Dockerfile  jsconfig.json  package-lock.json  package.json  project.json  tsconfig.json  webpack.common.js  webpack.dev.js
coverage/tester/: coverage.xml
libs/use-api/: README.md  jest.config.js  project.json  tsconfig.lib.json
meal-ui/: .babelrc  .eslintrc.js  .prettierrc.js  Dockerfile  README.md  babel.config.js  dev.webpack.config.js  index.html  package-lock.json  package.json  prod.webpack.config.js  vite.config.js  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
meal-ui/nginx/: default.conf
meal-ui/public/: index.html
meal-ui/src/: App.js  App.jsx  DemoImage.js  ThemeProvider.js  VersionInfo.js
meal-ui/webpack/: webpack.config.js  webpack.dev.js  webpack.prod.js
src/InMeal/: InMeal.sln
src/meal-ui/: README.md  package-lock.json  package.json
(+906 files in other folders)
