[tool.coverage.run]
branch = true
source = [ "generative_recipe_images" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:'../../coverage/apps/generative-recipe-images/html' --cov-report xml:'../../coverage/apps/generative-recipe-images/coverage.xml' --html='../../reports/apps/generative-recipe-images/unittests/html/index.html' --junitxml='../../reports/apps/generative-recipe-images/unittests/junit.xml'"

[tool.poetry]
name = "generative-recipe-images"
version = "1.0.0"
description = "A simple REST Microservice abstracting the consumption of a generative model for images of a recipe."
authors = [ "Albert Ferguson" ]
license = 'Proprietary'
readme = 'README.md'

[[tool.poetry.packages]]
include = "generative_recipe_images"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "0.103.2"
jsonschema = "4.19.1"
pydantic = "2.4.2"
python-dotenv = "1.0.0"
urllib3 = "2.0.7"
uvicorn = "0.23.2"
uvloop = "0.18.0"
aniso8601 = "9.0.1"
annotated-types = "0.6.0"
anyio = "3.7.1"
attrs = "23.1.0"
blinker = "1.6.2"
certifi = "2023.7.22"
charset-normalizer = "3.3.0"
click = "8.1.7"
clickclick = "20.10.2"
exceptiongroup = "1.1.3"
flask-restplus = "0.13.0"
h11 = "0.14.0"
httptools = "0.6.1"
idna = "3.4"
inflection = "0.5.1"
injector = "0.21.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
jsonschema-specifications = "2023.7.1"
markupsafe = "2.1.3"
packaging = "23.2"
pydantic-core = "2.10.1"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
referencing = "0.30.2"
requests = "2.31.0"
rpds-py = "0.10.3"
six = "1.16.0"
sniffio = "1.3.0"
starlette = "0.27.0"
swagger-ui = "0.1.2"
swagger-ui-bundle = "0.0.9"
typing-extensions = "4.8.0"
watchfiles = "0.21.0"
websockets = "11.0.3"
werkzeug = "2.2.3"

[tool.poetry.group.dev.dependencies]
autopep8 = "2.0.2"
pytest = "7.3.1"
pytest-sugar = "0.9.7"
pytest-cov = "4.1.0"
pytest-html = "3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
