[tool.poetry]
name = "gri"
version = "1.1.0"
description = "Generative Recipe Images (aka. GRI) - A REST Microservice abstracting the consumption of a generative model for images of a recipe."
authors = [ "Albert Ferguson <albertferguson118@gmail.com>" ]
license = "MIT"
readme = "README.md"

[[tool.poetry.packages]]
include = "gri"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "0.103.2"
jsonschema = "4.19.1"
pydantic = "2.4.2"
python-dotenv = "1.0.0"
urllib3 = "2.0.7"
uvicorn = "0.23.2"
uvloop = "0.18.0"
aniso8601 = "9.0.1"
annotated-types = "0.6.0"
anyio = "3.7.1"
attrs = "23.1.0"
blinker = "1.6.2"
certifi = "2023.7.22"
charset-normalizer = "3.3.0"
click = "8.1.7"
clickclick = "20.10.2"
exceptiongroup = "1.1.3"
flask-restplus = "0.13.0"
h11 = "0.14.0"
httptools = "0.6.1"
idna = "3.7"
inflection = "0.5.1"
injector = "0.21.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.4"
jsonschema-specifications = "2023.7.1"
markupsafe = "2.1.3"
packaging = "23.2"
pydantic-core = "2.10.1"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
referencing = "0.30.2"
requests = "2.31.0"
rpds-py = "0.10.3"
six = "1.16.0"
sniffio = "1.3.0"
starlette = "0.27.0"
swagger-ui = "0.1.2"
swagger-ui-bundle = "0.0.9"
typing-extensions = "4.8.0"
watchfiles = "0.21.0"
websockets = "11.0.3"
werkzeug = "2.3.8"
poetry-plugin-export = "^1.6.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
